--- a/mypy.ini
+++ b/mypy.ini
@@ -2,8 +2,8 @@
 implicit_reexport = True
 ignore_missing_imports = True
 
-[ibdatastream.ibdatastream_pb2_grpc]
+[mypy-ibdatastream.ibdatastream_pb2_grpc]
 ignore_errors = True
 
-[ibdatastream.ibdatastream_pb2]
+[mypy-ibdatastream.ibdatastream_pb2]
 ignore_errors = True
