--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,21 @@
 [mypy]
 implicit_reexport = True
+disallow_subclassing_any = True
+disallow_any_generics = True
+disallow_untyped_defs = True
+disallow_incomplete_defs = True
+check_untyped_defs = True
+disallow_untyped_decorators = True
+no_implicit_optional = True
+strict_optional = True
+warn_redundant_casts = True
+warn_unused_ignores = True
+warn_no_return = True
+warn_return_any = True
+warn_unreachable = True
+disallow_untyped_globals = True
+disallow_redefinition = True
+strict_equality = True
 
 [mypy-ibdatastream.ibdatastream_pb2_grpc]
 ignore_errors = True
