Bridge futures libraries to get test executing correctly

--- a/mypy.ini
+++ b/mypy.ini
@@ -23,6 +23,10 @@ ignore_errors = True
 [mypy-ibdatastream.ibdatastream_pb2]
 ignore_errors = True
 
+[mypy-ibdatastream.futures_bridge]
+# Ignores a bunch of weird issues where the type definitions we use for mypy don't line up with the actual APIs.
+disallow_any_generics = False
+
 [mypy-grpc]
 ignore_missing_imports = True
 
